2005-08-08  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/programming-interface.itely (Markup
	construction in Scheme): Corrected example and tried to clarify
	the implicit \line in the table.

2005-08-07  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/instrument-notation.itely: moved
	some bagpipe info back into the bagpipe section.  Somehow
	it ended up in the "other vocal issues" section?!  :o_O

2005-08-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-ps.scm (dir-join): Rename from path-join (joins
	directories, not paths).

2005-08-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-ps.scm (munge-lily-font-name): Bugfix: Munge only
	plain emmentaler/aybabtu.  Backportme.

	* lily/tuplet-bracket.cc (calc_position_and_height): Bugfix:
	missing dir correction.

2005-08-05  Graham Percival  <gperlist@shaw.ca>

	* scm/define-markup-commands: fix reversed justify/wordwrap
	doc strings.

2005-08-05  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/ligature-engaver.cc, lily/coherent-ligature-engaver.cc,
	lily/gregorian-ligature-engaver.cc,
	lily/include/ligature-engraver.hh,
	lily/include/coherent-ligature-engraver.hh,
	lily/include/gregorian-ligature-engraver.hh: make these classes
	truely abstract.  This should fix some internal oddities such as
	duplicate as well as dead translator/property declarations, and
	also some dead code.

	* lily/ligature-bracket-engraver.cc, lily/ligature-engraver.cc:
	bugfix: avoid message "junking empty ligature" on ligature
	brackets by collecting dummy grobs.

2005-08-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tuplet-bracket.cc (print): default right overshoot to 0.0

	* input/proportional.ly (staffKind): bugfix.
	(staffKind): updates by Trevor Baca.

	* scm/define-grobs.scm (all-grob-descriptions): remove arrows as
	default layout. 

	* lily/tuplet-bracket.cc (print): check whether edge-text is a
	pair.

	* lily/beam.cc (rest_collision_callback): call position_beam() if
	necessary.
